cumulative commit from missed git time in april-may 2020