@@ -38,7 +38,7 @@ public final class ViewGroupAction extends Action {
           s_log.warn("execute() no id");
           return mapping.findForward("error");
         }
-        int id = (new Integer(idStr)).intValue();
+        int id = (Integer.valueOf(idStr)).intValue();
         s_log.info("looking up group " + id);
             
         //Group group = GroupMgr.getGroup(id);
