@@ -49,7 +49,7 @@ public final class AntwebInviteAction extends Action {
             } else {
                 return mapping.findForward("goToLogin");  // if user later follows invitation link...
             }
-            int id = (new Integer(idStr)).intValue();
+            int id = (Integer.valueOf(idStr)).intValue();
             s_log.info("looking up login " + id);
              
             login = (new LoginDb(connection)).getLogin(id);
